--- a/_config.yml
+++ b/_config.yml
@@ -1,12 +1,12 @@
-title:            Journey with a Fiat Ducato Elettra
-description:      "We (Will) Travel Solar"
+title:            Latinamerica by Bike
+description:      "Manual speed"
 logo:             templogo.png
 share:            true
 dropcap:			true
 # Change url to your domain. Leave localhost server or blank when working locally.
 # or use the hint from http://jekyllrb.com/docs/github-pages/ to keep this the same 
 # whether working locally or remotely. Start Jekyll with: jekyll serve --baseurl ''
-url:        	  /Notepad
+url:        	  ohnemax.github.io/latinamerica.bike
 baseurl:          /
 
 # Owner/author information
