--- a/_config.yml
+++ b/_config.yml
@@ -6,8 +6,7 @@ dropcap:			true
 # Change url to your domain. Leave localhost server or blank when working locally.
 # or use the hint from http://jekyllrb.com/docs/github-pages/ to keep this the same 
 # whether working locally or remotely. Start Jekyll with: jekyll serve --baseurl ''
-url:        	  ohnemax.github.io/latinamerica.bike
-baseurl:          /
+url:        	  /latinamerica.bike
 
 # Owner/author information
 owner:
