--- a/_config.yml
+++ b/_config.yml
@@ -32,11 +32,11 @@ authors:
   mardy:
     name: Martha
     display_name: Martha
-    email: martha@latinamerica.bike
+    email: martha@latin...a.bike
   ohnemax:
     name: Moritz Kütt
     display_name: Moritz
-    email: moritz@latinamerica.bike
+    email: moritz@latin...a.bike
     
 # Links to include in footer navigation
 # For external links add external: true
