--- a/_config.yml
+++ b/_config.yml
@@ -68,7 +68,7 @@ future:      true
 highlighter: rouge
 markdown:    kramdown
 paginate:    5
-paginate_path: "archive:num"
+paginate_path: "/archive/page:num"
 
 # https://github.com/mojombo/jekyll/wiki/Permalinks
 permalink:   /:categories/:title
