--- a/_config.yml
+++ b/_config.yml
@@ -24,8 +24,8 @@ owner:
   email:          bus@wetravel.solar
   description:    Blog Description
   # Social networking links used in footer. Update and remove as you like.
-  twitter:        wetravelsolar
-  github:         ohnemax      
+  # twitter:        wetravelsolar
+  # github:         ohnemax      
 
 # Author Information
 authors:
