--- a/_config.yml
+++ b/_config.yml
@@ -33,10 +33,12 @@ authors:
     name: Martha
     display_name: Martha
     email: martha@latin...a.bike
+    avatar: martha.jpg
   ohnemax:
     name: Moritz Kütt
     display_name: Moritz
     email: moritz@latin...a.bike
+    avatar: moritz.jpg
     
 # Links to include in footer navigation
 # For external links add external: true
