--- a/_config.yml
+++ b/_config.yml
@@ -8,7 +8,7 @@ description:
 index:
   en: index.html
   de: start.html
-logo:             templogo.png
+#logo:             templogo.png
 share:            true
 dropcap:          true
 
