Blog logo modified

--- a/_config.yml
+++ b/_config.yml
@@ -8,7 +8,7 @@ description:
 index:
   en: index-en.html
   de: index.html
-#logo:             templogo.png
+logo:             images/header1.JPG
 share:            true
 dropcap:          true
 
