--- a/_config.yml
+++ b/_config.yml
@@ -3,8 +3,8 @@ title:
   en: Latinamerica by Bike
   de: Südamerika per Rad
 description:
-  en: Travel slowly
-  de: Langsam reisen
+  en: Travel slowly!
+  de: Reise langsam!
 index:
   en: index-en.html
   de: index.html
