main domain settings

--- a/_config.yml
+++ b/_config.yml
@@ -15,7 +15,7 @@ dropcap:          true
 # url
 #url:        	  /latinamerica.bike/
 # baseurl -> subfolder
-baseurl:	  /latinamerica.bike/
+baseurl:	  /
 
 # Owner/author information
 owner:
