--- a/_config.yml
+++ b/_config.yml
@@ -13,7 +13,7 @@ share:            true
 dropcap:          true
 
 # url
-#url:        	  /latinamerica.bike/
+url:        	  www.latinamerica.bike
 # baseurl -> subfolder
 baseurl:	  /
 
