main domain settings

--- a/_config.yml
+++ b/_config.yml
@@ -15,7 +15,7 @@ dropcap:          true
 # url
 url:        	  www.latinamerica.bike
 # baseurl -> subfolder
-baseurl:	  /
+baseurl:	  
 
 # Owner/author information
 owner:
