main domain settings

--- a/_config.yml
+++ b/_config.yml
@@ -13,9 +13,9 @@ share:            true
 dropcap:          true
 
 # url
-url:        	  www.latinamerica.bike
+url:        	  
 # baseurl -> subfolder
-baseurl:	WWW.latinamerica.bike
+baseurl:	www.latinamerica.bike
 
 # Owner/author information
 owner:
