Remove baseurl variable

--- a/_config.yml
+++ b/_config.yml
@@ -13,9 +13,9 @@ share:            true
 dropcap:          true
 
 # url
-url:        	  
+url:        	www.latinamerica.bike
 # baseurl -> subfolder
-baseurl:	www.latinamerica.bike
+baseurl:	
 
 # Owner/author information
 owner:
