--- a/_config.yml
+++ b/_config.yml
@@ -13,7 +13,7 @@ share:            true
 dropcap:          true
 
 # url
-url:        	www.latinamerica.bike
+url:        	http://www.latinamerica.bike
 # baseurl -> subfolder
 baseurl:	
 
