Minor spelling things...

--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 # Site Settings
 title:
-  en: Latinamerica by Bike
+  en: Latin America by Bike
   de: Südamerika per Rad
 description:
   en: Travel slowly!
@@ -8,6 +8,9 @@ description:
 index:
   en: index-en.html
   de: index.html
+commentstitle:
+  en: Comments
+  de: Kommentare
 logo:             header1.JPG
 share:            true
 dropcap:          true
