--- a/_config.yml
+++ b/_config.yml
@@ -11,6 +11,15 @@ index:
 commentstitle:
   en: Comments
   de: Kommentare
+textauthor:
+  en: Author
+  de: Autor
+textby:
+  en: by
+  de: von
+texton:
+  en: on
+  de: zu
 logo:             header1.JPG
 share:            true
 dropcap:          true
