--- a/_config.yml
+++ b/_config.yml
@@ -64,6 +64,9 @@ links:
       title: Home
       url: /index-en
       icon: home
+    statistics:
+      title: Statistics
+      url: /stats
     about:
       title: About
       url: /about
@@ -78,6 +81,9 @@ links:
       title: Home
       url: /
       icon: home
+    statistics:
+      title: Statistiken
+      url: /stats  
     about:
       title: Über
       url: /ueber
