--- a/_config.yml
+++ b/_config.yml
@@ -66,7 +66,7 @@ links:
       icon: home
     statistics:
       title: Statistics
-      url: /stats
+      url: /stats_en
     about:
       title: About
       url: /about
@@ -83,7 +83,7 @@ links:
       icon: home
     statistics:
       title: Statistiken
-      url: /stats  
+      url: /stats_de  
     about:
       title: Über
       url: /ueber
