--- a/_config.yml
+++ b/_config.yml
@@ -20,7 +20,7 @@ textby:
 texton:
   en: on
   de: zu
-logo:             header1.JPG
+logo:             header2.jpg
 share:            true
 dropcap:          true
 
