Neu programmierte Galerie

--- a/_config.yml
+++ b/_config.yml
@@ -20,6 +20,10 @@ textby:
 texton:
   en: on
   de: zu
+textfavorites:
+  en: Favorites
+  de: Favoriten
+  es: Favoritos
 logo:             header2.jpg
 share:            true
 dropcap:          true
